<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etFirstNumEditText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background3">

    <Button
        android:id="@+id/btnMul"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:layout_alignStart="@+id/btnDiv"
        android:layout_centerVertical="true"
        android:text="@string/mul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:layout_alignEnd="@+id/tvRes"
        android:layout_alignTop="@+id/btnSub"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnAdd"
        android:layout_marginBottom="189dp"
        android:text="@string/sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etFirstNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/first_number"
        android:inputType="number" />


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="31dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="176dp"
        android:text="@string/result"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="218dp" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="160dp"
        android:text="@string/reset" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnClear"
        android:layout_alignParentStart="true"
        android:layout_marginStart="98dp" />

    <EditText
        android:id="@+id/etSecondNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:ems="10"
        android:hint="@string/second_number"
        android:inputType="number" />

</RelativeLayout>